Java 9 compat